fix content padding in small screen fix shift card would be the same height

--- a/src/app/_elements/shift-table/shift-card/shift-card.component.scss
+++ b/src/app/_elements/shift-table/shift-card/shift-card.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/_styles/global';
 
 .shift-card {
-  width: 210px;
+  width: 242px;
 
   .mat-card-header {
 
